<resources>
    <string name="app_name">PAM_TR</string>
    <string name="txt_login">Login</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_signup">Sign Up</string>
    <string name="Forgor">Forgot Password?</string>
    <string name="usernameProfile">Hello, [Name]!</string>
    <string name="txt_regis">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">LOGOUT</string>
    <string name="ganti_password">Ganti Password</string>
</resources>